--- a/chat-signal/package.json
+++ b/chat-signal/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
